testdata/baselines/reference/submodule/conformance/jsDeclarationsTypeReferences.errors.txt
index.js(7,1): error TS2580: Cannot find name 'module'. Do you need to install type definitions for node? Try `npm i --save-dev @types/node`.


==== index.js (1 errors) ====
    /// <reference types="node" />
    
    const Something = require("fs").Something;
    
    const thing = new Something();
    
    module.exports = {
    ~~~~~~
!!! error TS2580: Cannot find name 'module'. Do you need to install type definitions for node? Try `npm i --save-dev @types/node`.
        thing
    };
    
==== node_modules/@types/node/index.d.ts (0 errors) ====
    declare module "fs" {
        export class Something {}
    }